# alfred

./: .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  JarvisX_Architecture_Matrix.md  Makefile  README.md  alpha_evidence_report.md  bootstrap.ps1  bootstrap.sh  dashboard_errors.txt  debug2_1784360131.db  debug2_out.txt  debug3_1784360299.db  debug3_out.txt  debug4_1784360396.db  debug4_out.txt  debug5_1784433943.db  debug5_out.txt  debug_1784359998.db  debug_1784360034.db  debug_err.txt  debug_test.py  debug_test2.py  debug_test3.py  debug_test4.py  debug_test5.py  demo_alfred_voice_runtime.py  demo_alpha_output.txt  demo_architecture.py  demo_bg.db  demo_browser_automation.py  demo_crash.db  demo_interactive.db  demo_interactive.py  demo_negotiation.py  demo_pause.db  demo_phase11.py  demo_phase11_visual.py  (+71 more)
.agents/: AGENTS.md
cad_workspace/: generated_cube.scad
config/: demo.json  voices.yaml
configs/: development.json
docs/: architecture.md  architecture_audit.md  debugging.md  developer_console.md  extending-agents.md  final_architecture.md  performance.md  phase22_reflection_recovery.md  phase23_persistent_objectives.md  production_readiness.md  repository_cleanup.md  security_audit.md  shadowbroker_analysis.md  testing_report.md  workforce_deployment.md
examples/: demo_friday_intro.py  demo_friday_live.py  demo_friday_visible.py  demo_friday_voice.py  demo_whatsapp_upscale.py  live_demo.py
logs/: runtime_trace.jsonl
scratch/: alfred_pdf_to_excel_demo.py  alfred_pdf_to_excel_demo_v2.py  alfred_pdf_to_excel_demo_v3.py  run_mission.py  (+9 more)
(+545 files in other folders)
