[project]
name = "project-jarvis-x"
version = "0.1.0"
description = "Offline-first modular personal AI operating system scaffold."
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "PyAutoGUI>=0.9.54",
    "opencv-python>=4.8.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jarvisx = "jarvisx.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
